--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,5 +14,8 @@
   "dependencies": {
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "electron": "^38.2.0"
   }
 }
